# LMS-with-fastapi-postgresql-sqlalchemy-orm

./: .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/data/: students.json
alembic/versions/: 09a6afaa3a9d_.py  6941b72b61a7_json_reverted.py  bcd06c937d0f_json_data_updated.py  e1344a9aef10_moving_is_active_to_users.py  eaa42b2e3d68_student_data_inserted.py
api/: courses.py  sections.py  users.py
api/utils/: courses.py  users.py
db/: db_setup.py
db/models/: course.py  user.py
pydantic_schema/: course.py  user.py
